# sets-puzzle-game

./: Makefile  mypy.ini  pyproject.toml
src/: index.py
